tests/ui/const-generics/occurs-check/unused-substs-5.stderr
error[E0308]: mismatched types
  --> $DIR/unused-substs-5.rs:15:19
   |
LL |     x = q::<_, N>(x);
   |                   ^ cyclic type of infinite size

error[E0277]: the trait bound `[u8; N + 1]: Default` is not satisfied
  --> $DIR/unused-substs-5.rs:19:16
   |
LL |     catch_me::<3>();
   |                ^ the trait `Default` is not implemented for `[u8; N + 1]`
   |
   = help: the following other types implement trait `Default`:
             &[T]
             &mut [T]
             [T; 32]
note: required by a bound in `catch_me`
  --> $DIR/unused-substs-5.rs:13:50
   |
LL | fn catch_me<const N: usize>() where [u8; N + 1]: Default {
   |                                                  ^^^^^^^ required by this bound in `catch_me`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
